fixed the alignment for the header

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body{
 .header-1{
     display: flex;
     justify-content: space-between;
+    align-items: baseline;
     
     
 }
